--- a/tong-ji-xue-xi-fang-fa-po-su-bei-xie-si.html
+++ b/tong-ji-xue-xi-fang-fa-po-su-bei-xie-si.html
@@ -64,11 +64,6 @@
           <div class="nav-collapse">
             <ul class="nav">
                           <li class="divider-vertical"></li>
-                  <li class="active">
-                    <a href="https://bridgeqiao.github.io/blog/category/blog.html">
-						<i class="icon-folder-open icon-large"></i>blog
-					</a>
-                  </li>
                   <li >
                     <a href="https://bridgeqiao.github.io/blog/category/fun.html">
 						<i class="icon-folder-open icon-large"></i>fun
@@ -79,7 +74,7 @@
 						<i class="icon-folder-open icon-large"></i>linux
 					</a>
                   </li>
-                  <li >
+                  <li class="active">
                     <a href="https://bridgeqiao.github.io/blog/category/machine-learning.html">
 						<i class="icon-folder-open icon-large"></i>Machine Learning
 					</a>
@@ -125,7 +120,7 @@
 <span class="label">By</span>
 <a href="https://bridgeqiao.github.io/blog/author/bridgeqiao.html"><i class="icon-user"></i>BridgeQiao</a>
 <span class="label">Category</span>
-<a href="https://bridgeqiao.github.io/blog/category/blog.html"><i class="icon-folder-open"></i>blog</a>.
+<a href="https://bridgeqiao.github.io/blog/category/machine-learning.html"><i class="icon-folder-open"></i>Machine Learning</a>.
 
 
 </footer><!-- /.post-info -->                </div>
@@ -212,11 +207,6 @@ $$</div>
     <li><a href="https://github.com"><i class="icon-external-link"></i>Github</a></li>
 
 <li class="nav-header"><h4><i class="icon-folder-close icon-large"></i>Categories</h4></li>
-<li>
-<a href="https://bridgeqiao.github.io/blog/category/blog.html">
-    <i class="icon-folder-open icon-large"></i>blog
-</a>
-</li>
 <li>
 <a href="https://bridgeqiao.github.io/blog/category/fun.html">
     <i class="icon-folder-open icon-large"></i>fun
