--- a/archives.html
+++ b/archives.html
@@ -65,6 +65,11 @@
             <ul class="nav">
                           <li class="divider-vertical"></li>
                   <li >
+                    <a href="https://bridgeqiao.github.io/blog/category/blog.html">
+						<i class="icon-folder-open icon-large"></i>blog
+					</a>
+                  </li>
+                  <li >
                     <a href="https://bridgeqiao.github.io/blog/category/fun.html">
 						<i class="icon-folder-open icon-large"></i>fun
 					</a>
@@ -103,6 +108,14 @@
 <h1>Archives for Bridge Qiao's Blog</h1>
 
 <dl>
+	<dt>一 19 三月 2018</dt>
+	<dd><a href='shi-yong-foobarti-gao-ben-di-bo-fang-yin-zhi.html'>使用foobar提高本地播放音质</a></dd>
+	<dt>三 31 一月 2018</dt>
+	<dd><a href='tong-ji-xue-xi-fang-fa-zhi-chi-xiang-liang-ji.html'>《统计学习方法》-支持向量机</a></dd>
+	<dt>二 23 一月 2018</dt>
+	<dd><a href='tong-ji-xue-xi-fang-fa-luo-ji-si-di-hui-gui-yu-zui-da-shang-mo-xing.html'>《统计学习方法》-逻辑斯蒂回归与最大熵模型</a></dd>
+	<dt>日 21 一月 2018</dt>
+	<dd><a href='tong-ji-xue-xi-fang-fa-jue-ce-shu.html'>《统计学习方法》-决策树</a></dd>
 	<dt>六 20 一月 2018</dt>
 	<dd><a href='tong-ji-xue-xi-fang-fa-po-su-bei-xie-si.html'>《统计学习方法》-朴素贝叶斯</a></dd>
 	<dt>五 19 一月 2018</dt>
@@ -137,6 +150,11 @@
     <li><a href="https://github.com"><i class="icon-external-link"></i>Github</a></li>
 
 <li class="nav-header"><h4><i class="icon-folder-close icon-large"></i>Categories</h4></li>
+<li>
+<a href="https://bridgeqiao.github.io/blog/category/blog.html">
+    <i class="icon-folder-open icon-large"></i>blog
+</a>
+</li>
 <li>
 <a href="https://bridgeqiao.github.io/blog/category/fun.html">
     <i class="icon-folder-open icon-large"></i>fun
