--- a/categories.html
+++ b/categories.html
@@ -65,6 +65,11 @@
             <ul class="nav">
                           <li class="divider-vertical"></li>
                   <li >
+                    <a href="https://bridgeqiao.github.io/blog/category/blog.html">
+						<i class="icon-folder-open icon-large"></i>blog
+					</a>
+                  </li>
+                  <li >
                     <a href="https://bridgeqiao.github.io/blog/category/fun.html">
 						<i class="icon-folder-open icon-large"></i>fun
 					</a>
@@ -100,6 +105,7 @@
       <div class="row">
         <div class="span9" id="content">
 <ul>
+	<li><a href="category/blog.html">blog</a></li>
 	<li><a href="category/fun.html">fun</a></li>
 	<li><a href="category/linux.html">linux</a></li>
 	<li><a href="category/machine-learning.html">Machine Learning</a></li>
@@ -115,6 +121,11 @@
     <li><a href="https://github.com"><i class="icon-external-link"></i>Github</a></li>
 
 <li class="nav-header"><h4><i class="icon-folder-close icon-large"></i>Categories</h4></li>
+<li>
+<a href="https://bridgeqiao.github.io/blog/category/blog.html">
+    <i class="icon-folder-open icon-large"></i>blog
+</a>
+</li>
 <li>
 <a href="https://bridgeqiao.github.io/blog/category/fun.html">
     <i class="icon-folder-open icon-large"></i>fun
