--- a/tong-ji-xue-xi-fang-fa-po-su-bei-xie-si.html
+++ b/tong-ji-xue-xi-fang-fa-po-su-bei-xie-si.html
@@ -65,6 +65,11 @@
             <ul class="nav">
                           <li class="divider-vertical"></li>
                   <li >
+                    <a href="https://bridgeqiao.github.io/blog/category/blog.html">
+						<i class="icon-folder-open icon-large"></i>blog
+					</a>
+                  </li>
+                  <li >
                     <a href="https://bridgeqiao.github.io/blog/category/fun.html">
 						<i class="icon-folder-open icon-large"></i>fun
 					</a>
@@ -207,6 +212,11 @@ $$</div>
     <li><a href="https://github.com"><i class="icon-external-link"></i>Github</a></li>
 
 <li class="nav-header"><h4><i class="icon-folder-close icon-large"></i>Categories</h4></li>
+<li>
+<a href="https://bridgeqiao.github.io/blog/category/blog.html">
+    <i class="icon-folder-open icon-large"></i>blog
+</a>
+</li>
 <li>
 <a href="https://bridgeqiao.github.io/blog/category/fun.html">
     <i class="icon-folder-open icon-large"></i>fun
