--- a/tags.html
+++ b/tags.html
@@ -1,140 +1,45 @@
 <!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <meta charset="utf-8"> 
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="BridgeQiao" />
-        <meta name="copyright" content="BridgeQiao" />
+<html lang="zh">
+<head>
+        <meta charset="utf-8" />
+        <title>Bridge Qiao's Blog - Tags</title>
+        <link rel="stylesheet" href="https://bridgeqiao.github.io/blog/theme/css/main.css" />
 
-        <meta property="og:type" content="article" />
-        <meta name="twitter:card" content="summary">
+        <!--[if IE]>
+            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+</head>
 
-<meta property="og:title" content="All Tags · Bridge Qiao&#39;s Blog"/>
-<meta name="twitter:title" content="All Tags · Bridge Qiao&#39;s Blog">
-<meta property="og:url" content="https://bridgeqiao.github.io/blog/tags.html" />
-<meta property="og:description" content="All tags used in the Bridge Qiao&#39;s Blog blog" />
-<meta name="twitter:description" content="All tags used in the Bridge Qiao&#39;s Blog blog">
-<meta property="og:site_name" content="Bridge Qiao&#39;s Blog" />
-<meta property="og:article:author" content="BridgeQiao" />
-        <title>All Tags · Bridge Qiao&#39;s Blog
-</title>
-        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
-        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="https://bridgeqiao.github.io/blog/theme/css/pygments.css" media="screen">
-        <link rel="stylesheet" type="text/css" href="https://bridgeqiao.github.io/blog/theme/tipuesearch/tipuesearch.css" media="screen">
-        <link rel="stylesheet" type="text/css" href="https://bridgeqiao.github.io/blog/theme/css/elegant.css" media="screen">
-        <link rel="stylesheet" type="text/css" href="https://bridgeqiao.github.io/blog/theme/css/custom.css" media="screen">
+<body id="index" class="home">
+        <header id="banner" class="body">
+                <h1><a href="https://bridgeqiao.github.io/blog/">Bridge Qiao's Blog </a></h1>
+                <nav><ul>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/blog.html">blog</a></li>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/fun.html">fun</a></li>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/linux.html">linux</a></li>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/machine-learning.html">Machine Learning</a></li>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/matlab.html">Matlab</a></li>
+                </ul>
+                </nav>
+        </header><!-- /#banner -->
 
-    </head>
-    <body>
-        <div id="content-sans-footer">
-        <div class="navbar navbar-static-top">
-            <div class="navbar-inner">
-                <div class="container-fluid">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </a>
-                    <a class="brand" href="https://bridgeqiao.github.io/blog/"><span class=site-name>Bridge Qiao's Blog</span></a>
-                    <div class="nav-collapse collapse">
-                        <ul class="nav pull-right top-menu">
-                            <li ><a href="https://bridgeqiao.github.io/blog">Home</a></li>
-                            <li ><a href="https://bridgeqiao.github.io/blog/categories.html">Categories</a></li>
-                            <li  class="active"><a href="https://bridgeqiao.github.io/blog/tags.html">Tags</a></li>
-                            <li ><a href="https://bridgeqiao.github.io/blog/archives.html">Archives</a></li>
-                            <li><form class="navbar-search" action="https://bridgeqiao.github.io/blog/search.html" onsubmit="return validateForm(this.elements['q'].value);"> <input type="text" class="search-query" placeholder="Search" name="q" id="tipue_search_input"></form></li>
+<section id="content" class="body">
+    <h1>Tags for Bridge Qiao's Blog</h1></section>
+
+        <section id="extras" class="body">
+                <div class="blogroll">
+                        <h2>blogroll</h2>
+                        <ul>
+                            <li><a href="http://getpelican.com/">Pelican</a></li>
+                            <li><a href="http://python.org/">Python.org</a></li>
+                            <li><a href="https://github.com">Github</a></li>
                         </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="row-fluid">
-                <div class="span1"></div>
-                <div class="span10">
+                </div><!-- /.blogroll -->
+        </section><!-- /#extras -->
 
-<div class="row-fluid">
-    <header class="page-header span10 offset2">
-    <h1><a href="https://bridgeqiao.github.io/blog/tags.html">All Tags</a></h1>
-    </header>
-</div>
-<div class="row-fluid">
-    <div class="span8 offset2">
-        <form class="form-search">
-            <input type="text" class="input-medium search-query filterinput" placeholder="Find a tag">
-        </form>
-        <ul class="list-of-tags">
-        </ul>
-    </div>
-</div>
+        <footer id="contentinfo" class="body">
+                <p>Powered by <a href="http://getpelican.com/">Pelican</a>. Theme <a href="https://github.com/blueicefield/pelican-blueidea/">blueidea</a>, inspired by the default theme.</p>
+        </footer><!-- /#contentinfo -->
 
-<div class="row-fluid">
-    <div class="span8 offset2">
-    </div>
-</div>
-
-                </div>
-                <div class="span1"></div>
-            </div>
-        </div>
-        <div id="push"></div>
-    </div>
-<footer>
-<div id="footer">
-    <ul class="footer-content">
-        <li class="elegant-power">Powered by <a href="http://getpelican.com/" title="Pelican Home Page">Pelican</a>. Theme: <a href="http://oncrashreboot.com/pelican-elegant" title="Theme Elegant Home Page">Elegant</a> by <a href="http://oncrashreboot.com" title="Talha Mansoor Home Page">Talha Mansoor</a></li>
-    </ul>
-</div>
-</footer>        <script src="http://code.jquery.com/jquery.min.js"></script>
-        <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-        <script>
-            function validateForm(query)
-            {
-                return (query.length > 0);
-            }
-        </script>
-
-
-<script>
-    (function ($) {
-        // custom css expression for a case-insensitive contains()
-        jQuery.expr[':'].Contains = function(a,i,m){
-            return (a.textContent || a.innerText || "").toUpperCase().indexOf(m[3].toUpperCase())>=0;
-        };
-
-        function listFilter() {
-
-            $('.filterinput')
-            .change( function () {
-                var filter = $(this).val();
-                if(filter) {
-                    // this finds all links in a list that contain the input,
-                    // and hide the ones not containing the input while showing the ones that do
-                    $('.list-of-tags').find("a:not(:Contains(" + filter + "))").parent().hide();
-                    $('.list-of-tags').find("a:Contains(" + filter + ")").parent().show();
-                    } else {
-                    $('.list-of-tags').find("li").show();
-                }
-                return false;
-            })
-            .keyup( function () {
-                // fire the above change event after every letter
-                $(this).change();
-            });
-        }
-
-        //ondomready
-        $(function () {
-            listFilter($());
-        });
-    }(jQuery));
-
-</script>
-
-
-    </body>
-    <!-- Theme: Elegant built for Pelican
-    License : http://oncrashreboot.com/pelican-elegant -->
+</body>
 </html>
