--- a/archives.html
+++ b/archives.html
@@ -15,6 +15,7 @@
                 <h1><a href="https://bridgeqiao.github.io/blog/">Bridge Qiao's Blog </a></h1>
                 <nav><ul>
                     <li><a href="https://bridgeqiao.github.io/blog/category/fun.html">fun</a></li>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/image-process.html">Image Process</a></li>
                     <li><a href="https://bridgeqiao.github.io/blog/category/linux.html">linux</a></li>
                     <li><a href="https://bridgeqiao.github.io/blog/category/machine-learning.html">Machine Learning</a></li>
                     <li><a href="https://bridgeqiao.github.io/blog/category/matlab.html">Matlab</a></li>
@@ -27,6 +28,8 @@
 <dl>
     <dt>一 19 三月 2018</dt>
     <dd><a href="https://bridgeqiao.github.io/blog/shi-yong-foobarti-gao-ben-di-bo-fang-yin-zhi.html">使用foobar提高本地播放音质</a></dd>
+    <dt>四 01 三月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/yue-du-shu-zi-tu-xiang-chu-li-matlabban-bi-ji.html">阅读《数字图像处理（MATLAB版）》笔记</a></dd>
     <dt>三 31 一月 2018</dt>
     <dd><a href="https://bridgeqiao.github.io/blog/tong-ji-xue-xi-fang-fa-zhi-chi-xiang-liang-ji.html">《统计学习方法》-支持向量机</a></dd>
     <dt>二 23 一月 2018</dt>
