--- a/authors.html
+++ b/authors.html
@@ -15,6 +15,7 @@
                 <h1><a href="https://bridgeqiao.github.io/blog/">Bridge Qiao's Blog </a></h1>
                 <nav><ul>
                     <li><a href="https://bridgeqiao.github.io/blog/category/fun.html">fun</a></li>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/image-process.html">Image Process</a></li>
                     <li><a href="https://bridgeqiao.github.io/blog/category/linux.html">linux</a></li>
                     <li><a href="https://bridgeqiao.github.io/blog/category/machine-learning.html">Machine Learning</a></li>
                     <li><a href="https://bridgeqiao.github.io/blog/category/matlab.html">Matlab</a></li>
@@ -23,7 +24,7 @@
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Authors on Bridge Qiao's Blog</h1>        <li><a href="https://bridgeqiao.github.io/blog/author/bridgeqiao.html">BridgeQiao</a> (15)</li>
+    <h1>Authors on Bridge Qiao's Blog</h1>        <li><a href="https://bridgeqiao.github.io/blog/author/bridgeqiao.html">BridgeQiao</a> (16)</li>
 </section>
 
         <section id="extras" class="body">
