--- a/authors.html
+++ b/authors.html
@@ -14,18 +14,12 @@
         <header id="banner" class="body">
                 <h1><a href="https://bridgeqiao.github.io/blog/">Bridge Qiao's Blog </a></h1>
                 <nav><ul>
-                    <li><a href="https://bridgeqiao.github.io/blog/category/fun.html">fun</a></li>
-                    <li><a href="https://bridgeqiao.github.io/blog/category/image-processing.html">Image Processing</a></li>
-                    <li><a href="https://bridgeqiao.github.io/blog/category/linux.html">linux</a></li>
-                    <li><a href="https://bridgeqiao.github.io/blog/category/machine-learning.html">Machine Learning</a></li>
-                    <li><a href="https://bridgeqiao.github.io/blog/category/matlab.html">Matlab</a></li>
                 </ul>
                 </nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Authors on Bridge Qiao's Blog</h1>        <li><a href="https://bridgeqiao.github.io/blog/author/bridgeqiao.html">BridgeQiao</a> (16)</li>
-</section>
+    <h1>Authors on Bridge Qiao's Blog</h1></section>
 
         <section id="extras" class="body">
                 <div class="blogroll">
