--- a/archives.html
+++ b/archives.html
@@ -14,6 +14,11 @@
         <header id="banner" class="body">
                 <h1><a href="https://bridgeqiao.github.io/blog/">Bridge Qiao's Blog </a></h1>
                 <nav><ul>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/fun.html">fun</a></li>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/image-processing.html">Image Processing</a></li>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/linux.html">linux</a></li>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/machine-learning.html">Machine Learning</a></li>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/matlab.html">Matlab</a></li>
                 </ul>
                 </nav>
         </header><!-- /#banner -->
@@ -21,6 +26,40 @@
 <h1>Archives for Bridge Qiao's Blog</h1>
 
 <dl>
+    <dt>二 24 七月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/zai-ubuntu-1804xia-an-zhuang-cuda91.html">在Ubuntu 18.04下安装CUDA9.1</a></dd>
+    <dt>二 03 四月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/yue-du-shu-zi-tu-xiang-chu-li-matlabban-bi-ji.html">阅读《数字图像处理（MATLAB版）》笔记</a></dd>
+    <dt>一 19 三月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/shi-yong-foobarti-gao-ben-di-bo-fang-yin-zhi.html">使用foobar提高本地播放音质</a></dd>
+    <dt>三 31 一月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/tong-ji-xue-xi-fang-fa-zhi-chi-xiang-liang-ji.html">《统计学习方法》-支持向量机</a></dd>
+    <dt>二 23 一月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/tong-ji-xue-xi-fang-fa-luo-ji-si-di-hui-gui-yu-zui-da-shang-mo-xing.html">《统计学习方法》-逻辑斯蒂回归与最大熵模型</a></dd>
+    <dt>日 21 一月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/tong-ji-xue-xi-fang-fa-jue-ce-shu.html">《统计学习方法》-决策树</a></dd>
+    <dt>六 20 一月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/tong-ji-xue-xi-fang-fa-po-su-bei-xie-si.html">《统计学习方法》-朴素贝叶斯</a></dd>
+    <dt>五 19 一月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/tong-ji-xue-xi-fang-fa-kjin-lin-fa.html">统计学习方法-k近邻法</a></dd>
+    <dt>二 16 一月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/wei-xin-tiao-yi-tiao.html">微信跳一跳</a></dd>
+    <dt>一 15 一月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/tong-ji-xue-xi-fang-fa-gai-lun.html">《统计学习方法》-概论</a></dd>
+    <dt>一 15 一月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/tong-ji-xue-xi-fang-fa-gan-zhi-ji.html">《统计学习方法》-感知机</a></dd>
+    <dt>日 14 一月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/shi-yong-hexo-githubda-jian-blog.html">使用hexo + github搭建blog</a></dd>
+    <dt>日 14 一月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/zai-winxia-an-zhuang-cygwin.html">在win下安装cygwin</a></dd>
+    <dt>五 29 九月 2017</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/zai-ubuntu1604xia-an-zhuang-matlab2017a.html">在ubuntu16.04下安装Matlab2017a</a></dd>
+    <dt>日 09 四月 2017</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/install-plymouth.html">install plymouth</a></dd>
+    <dt>六 08 四月 2017</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/an-zhuang-manjaro.html">安裝manjaro</a></dd>
+    <dt>二 07 三月 2017</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/an-zhuang-deepin-154.html">安装deepin 15.4</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
