--- a/authors.html
+++ b/authors.html
@@ -19,12 +19,13 @@
                     <li><a href="https://bridgeqiao.github.io/blog/category/linux.html">linux</a></li>
                     <li><a href="https://bridgeqiao.github.io/blog/category/machine-learning.html">Machine Learning</a></li>
                     <li><a href="https://bridgeqiao.github.io/blog/category/matlab.html">Matlab</a></li>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/suan-fa-ti.html">算法题</a></li>
                 </ul>
                 </nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Authors on Bridge Qiao's Blog</h1>        <li><a href="https://bridgeqiao.github.io/blog/author/bridgeqiao.html">BridgeQiao</a> (17)</li>
+    <h1>Authors on Bridge Qiao's Blog</h1>        <li><a href="https://bridgeqiao.github.io/blog/author/bridgeqiao.html">BridgeQiao</a> (19)</li>
 </section>
 
         <section id="extras" class="body">
