--- a/archives.html
+++ b/archives.html
@@ -19,6 +19,7 @@
                     <li><a href="https://bridgeqiao.github.io/blog/category/linux.html">linux</a></li>
                     <li><a href="https://bridgeqiao.github.io/blog/category/machine-learning.html">Machine Learning</a></li>
                     <li><a href="https://bridgeqiao.github.io/blog/category/matlab.html">Matlab</a></li>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/suan-fa-ti.html">算法题</a></li>
                 </ul>
                 </nav>
         </header><!-- /#banner -->
@@ -26,6 +27,10 @@
 <h1>Archives for Bridge Qiao's Blog</h1>
 
 <dl>
+    <dt>六 15 九月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/biao-da-shi-qu-gua-hao.html">表达式去括号</a></dd>
+    <dt>五 10 八月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/pei-zhi-cckai-fa-huan-jing.html">配置c/c++开发环境</a></dd>
     <dt>二 24 七月 2018</dt>
     <dd><a href="https://bridgeqiao.github.io/blog/zai-ubuntu-1804xia-an-zhuang-cuda91.html">在Ubuntu 18.04下安装CUDA9.1</a></dd>
     <dt>二 03 四月 2018</dt>
