--- a/archives.html
+++ b/archives.html
@@ -27,6 +27,8 @@
 <h1>Archives for Bridge Qiao's Blog</h1>
 
 <dl>
+    <dt>五 21 九月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/mexdiao-yong-opencv.html">mex调用opencv</a></dd>
     <dt>六 15 九月 2018</dt>
     <dd><a href="https://bridgeqiao.github.io/blog/biao-da-shi-qu-gua-hao.html">表达式去括号</a></dd>
     <dt>五 10 八月 2018</dt>
