--- a/archives.html
+++ b/archives.html
@@ -27,12 +27,14 @@
 <h1>Archives for Bridge Qiao's Blog</h1>
 
 <dl>
+    <dt>六 06 十月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/17tian-bei-gredan-ci.html">17天背GRE单词</a></dd>
     <dt>五 21 九月 2018</dt>
     <dd><a href="https://bridgeqiao.github.io/blog/mexdiao-yong-opencv.html">mex调用opencv</a></dd>
     <dt>六 15 九月 2018</dt>
     <dd><a href="https://bridgeqiao.github.io/blog/biao-da-shi-qu-gua-hao.html">表达式去括号</a></dd>
     <dt>五 10 八月 2018</dt>
-    <dd><a href="https://bridgeqiao.github.io/blog/pei-zhi-cckai-fa-huan-jing.html">配置c/c++开发环境</a></dd>
+    <dd><a href="https://bridgeqiao.github.io/blog/opencvpei-zhi-cckai-fa-huan-jing.html">openCV配置c/c++开发环境</a></dd>
     <dt>二 24 七月 2018</dt>
     <dd><a href="https://bridgeqiao.github.io/blog/zai-ubuntu-1804xia-an-zhuang-cuda91.html">在Ubuntu 18.04下安装CUDA9.1</a></dd>
     <dt>二 03 四月 2018</dt>
