--- a/17tian-bei-gredan-ci.html
+++ b/17tian-bei-gredan-ci.html
@@ -112,7 +112,7 @@
 <p>著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。</p>
 </blockquote>
 <p>个人觉得这本书的好处就是点明了<code>重复</code>和<code>数量与质量</code>这两个概念，很多人都有背单词有没有效果、每天背多少单词之类的考量，我个人觉得背单词肯定是有效果的，毕竟是一种科学的方式，但如何让这种方法更有效果，就需要看前面的理论部分。</p>
-<p>在网上看有些人说对四六级没效果，我个人觉得那是没有把这本书读懂，生搬硬套了表面的一套方法。这本书重点不在于每天学多少个list、多少多少个单词，而是重复，最终记住。四六级对单词的要求比GRE高，所以减少每天背单词的数量很有必要，当然有些记忆力好的人可以忽略，提高背诵的质量，但也不能太少，我相信很少有人会花几个月去背。背完（学习新单词完成）就马上进行阅读文章，进行有语境的巩固，更好的就是造句了。</p>
+<p>背完（学习新单词完成）就马上进行阅读文章，进行有语境的巩固，更好的就是造句了。</p>
     </div><!-- /.entry-content -->
 
   </article>
