--- a/archives.html
+++ b/archives.html
@@ -14,8 +14,8 @@
         <header id="banner" class="body">
                 <h1><a href="https://bridgeqiao.github.io/blog/">Bridge Qiao's Blog </a></h1>
                 <nav><ul>
+                    <li><a href="https://bridgeqiao.github.io/blog/category/computer-vision.html">Computer vision</a></li>
                     <li><a href="https://bridgeqiao.github.io/blog/category/fun.html">fun</a></li>
-                    <li><a href="https://bridgeqiao.github.io/blog/category/image-processing.html">Image Processing</a></li>
                     <li><a href="https://bridgeqiao.github.io/blog/category/linux.html">linux</a></li>
                     <li><a href="https://bridgeqiao.github.io/blog/category/machine-learning.html">Machine Learning</a></li>
                     <li><a href="https://bridgeqiao.github.io/blog/category/matlab.html">Matlab</a></li>
@@ -27,6 +27,10 @@
 <h1>Archives for Bridge Qiao's Blog</h1>
 
 <dl>
+    <dt>四 25 十月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/opencv3bian-cheng-ru-men-xue-xi-bi-ji.html">《OpenCV3编程入门》学习笔记</a></dd>
+    <dt>五 19 十月 2018</dt>
+    <dd><a href="https://bridgeqiao.github.io/blog/emacs-shi-yong.html">emacs 使用</a></dd>
     <dt>六 06 十月 2018</dt>
     <dd><a href="https://bridgeqiao.github.io/blog/17tian-bei-gredan-ci.html">17天背GRE单词</a></dd>
     <dt>五 21 九月 2018</dt>
